--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="fallback-icon" style="display:none;">👼</div>
                     </div>
                     <div class="file-details">
-                        <h3>LittleAngel.exe</h3>
+                        <h3>LittleAngel.zip</h3>
                     </div>
                 </div>
             </div>
