--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
             // Disable button during download
             downloadBtn.disabled = true;
             
-            // Create download link for LittleAngel.exe from root directory
+            // Create download link for LittleAngel.zip from root directory
             const link = document.createElement('a');
-            link.href = './LittleAngel.exe'; // This points to the file in root directory
-            link.download = 'LittleAngel.exe';
+            link.href = './LittleAngel.zip'; // This points to the file in root directory
+            link.download = 'LittleAngel.zip';
             link.style.display = 'none';
             document.body.appendChild(link);
             
