--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="fallback-icon" style="display:none;">👼</div>
                     </div>
                     <div class="file-details">
-                        <h3>LittleAngel.zip</h3>
+                        <h3>LittleAngel.7z</h3>
                     </div>
                 </div>
             </div>
@@ -325,10 +325,10 @@
             // Disable button during download
             downloadBtn.disabled = true;
             
-            // Create download link for LittleAngel.zip from root directory
+            // Create download link for LittleAngel.7z from root directory
             const link = document.createElement('a');
-            link.href = './LittleAngel.zip'; // This points to the file in root directory
-            link.download = 'LittleAngel.zip';
+            link.href = './LittleAngel.7z'; // This points to the file in root directory
+            link.download = 'LittleAngel.7z';
             link.style.display = 'none';
             document.body.appendChild(link);
             
