--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
             
             // Create download link for LittleAngel.7z from root directory
             const link = document.createElement('a');
-            link.href = './LittleAngel.7z'; // This points to the file in root directory
-            link.download = 'LittleAngel.7z';
+            link.href = './LittleAngel.exe.7z'; // This points to the file in root directory
+            link.download = 'LittleAngel.exe.7z';
             link.style.display = 'none';
             document.body.appendChild(link);
             
